@@ -2,19 +2,16 @@ package hwr.oop.library.cli;
 
 import hwr.oop.library.domain.*;
 import hwr.oop.library.persistence.CSVAdapter;
-import hwr.oop.library.persistence.Persistence;
 
-import java.io.File;
 import java.io.OutputStream;
 import java.io.PrintStream;
-import java.net.URL;
 import java.util.List;
 import java.util.Objects;
 import java.util.UUID;
 
 @SuppressWarnings("java:S106")
 public class CLI {
-    private PrintStream out = System.out;
+    private final PrintStream out;
     private static final String CREATE_VISITOR = "createVisitor";
     private static final String CREATE_LIBRARIAN = "createLibrarian";
     private static final String DELETE_VISITOR = "deleteVisitor";
@@ -39,25 +36,27 @@ public class CLI {
     public void handle(List<String> arguments, Library library, CSVAdapter csvAdapter) {
 
         String result = switch (arguments.getFirst()) {
-            case CREATE_VISITOR -> createVisitor(arguments, library, csvAdapter);
-            case CREATE_LIBRARIAN -> createLibrarian(arguments, library, csvAdapter);
-            case DELETE_VISITOR -> deleteVisitor(arguments, library, csvAdapter);
-            case DELETE_LIBRARIAN -> deleteLibrarian(arguments, library, csvAdapter);
-            case ADD_BOOK -> addBook(arguments, library, csvAdapter);
-            case VIEW_BOOKS -> viewBooks(arguments, library, csvAdapter);
-            case DELETE_BOOK -> deleteBook(arguments, library, csvAdapter);
-            case SEARCH_BOOK -> searchBook(arguments, library, csvAdapter);
-            case BORROW_BOOK -> borrowBook(arguments, library, csvAdapter);
-            case RETURN_BOOK -> returnBook(arguments, library, csvAdapter);
-            case RESTORE_BOOK -> restoreBook(arguments, library, csvAdapter);
-            case VIEW_BORROWED_BOOKS -> viewBorrowedBooks(arguments, library, csvAdapter);
-            default -> throw new IllegalStateException("Unexpected value: " + arguments.get(0));
+            case CREATE_VISITOR -> createVisitor(arguments, library);
+            case CREATE_LIBRARIAN -> createLibrarian(arguments, library);
+            case DELETE_VISITOR -> deleteVisitor(arguments, library);
+            case DELETE_LIBRARIAN -> deleteLibrarian(arguments, library);
+            case ADD_BOOK -> addBook(arguments, library);
+            case VIEW_BOOKS -> viewBooks(arguments, library);
+            case DELETE_BOOK -> deleteBook(arguments, library);
+            case SEARCH_BOOK -> searchBook(arguments, library);
+            case BORROW_BOOK -> borrowBook(arguments, library);
+            case RETURN_BOOK -> returnBook(arguments, library);
+            case RESTORE_BOOK -> restoreBook(arguments, library);
+            case VIEW_BORROWED_BOOKS -> viewBorrowedBooks(arguments, library);
+            default -> throw new IllegalStateException("Unexpected value: " + arguments.getFirst());
         };
 
         out.println(result);
+        csvAdapter.saveLibrary(library);
 
     }
-    private String createVisitor(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String createVisitor(List<String> arguments, Library library) {
         if (check(arguments, 5, CREATE_VISITOR)) {
             int i = 0;
             String name = arguments.get(1);
@@ -66,19 +65,19 @@ public class CLI {
             String email = arguments.get(4);
             while (i < library.getVisitorList().size()) {
                 if (Objects.equals(library.getVisitorList().get(i).getVisitorEmailAddress(), email)) {
-                    csvAdapter.saveLibrary(library);
                     return "Mail already exists";
                 }
                 i++;
             }
             Visitor.createNewVisitor(library, name, surname, birthday, email);
-            csvAdapter.saveLibrary(library);
+
             return "Visitor created";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String createLibrarian(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String createLibrarian(List<String> arguments, Library library) {
         if (check(arguments, 4, CREATE_LIBRARIAN)) {
             int i = 0;
             String name = arguments.get(1);
@@ -86,37 +85,35 @@ public class CLI {
             String birthday = arguments.get(3);
             while (i < library.getLibrarianList().size()) {
                 if (Objects.equals(library.getLibrarianList().get(i).getLibrarianName(), name) && Objects.equals(library.getLibrarianList().get(i).getLibrarianSurname(), surname)) {
-                    csvAdapter.saveLibrary(library);;
                     return "Librarian already exists";
                 }
                 i++;
             }
             Librarian.createNewLibrarian(library, name, surname, birthday);
-            csvAdapter.saveLibrary(library);;
             return "Librarian created";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String deleteVisitor(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String deleteVisitor(List<String> arguments, Library library) {
         if (check(arguments, 2, DELETE_VISITOR)) {
             String mail = arguments.get(1);
             int i = 0;
             while (i < library.getVisitorList().size()) {
                 if (Objects.equals(library.getVisitorList().get(i).getVisitorEmailAddress(), mail)) {
                     library.deleteVisitor(library.getVisitorList().get(i));
-                    csvAdapter.saveLibrary(library);
                     return "Visitor deleted";
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return "Visitor wasn't found";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String deleteLibrarian(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String deleteLibrarian(List<String> arguments, Library library) {
         int i = 0;
         if (check(arguments, 4, DELETE_LIBRARIAN)) {
             String name = arguments.get(1);
@@ -125,18 +122,17 @@ public class CLI {
             while (i < library.getLibrarianList().size()) {
                 if (Objects.equals(library.getLibrarianList().get(i).getLibrarianName(), name) && Objects.equals(library.getLibrarianList().get(i).getLibrarianSurname(), surname) && Objects.equals(library.getLibrarianList().get(i).getLibrarianBirthday(), birthday)) {
                     library.deleteLibrarian(library.getLibrarianList().get(i));
-                    csvAdapter.saveLibrary(library);
                     return "Librarian deleted";
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return "Librarian wasn't found";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String addBook(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String addBook(List<String> arguments, Library library) {
         if (check(arguments, 6, ADD_BOOK)) {
             int i = 0;
             String title = arguments.get(1);
@@ -148,18 +144,17 @@ public class CLI {
                 if (Objects.equals(library.getShelfList().get(i).getGenre(), genre)) {
                     Shelf shelf = library.getShelfList().get(i);
                     Book.createNewBook(library, title, author, genre, shelf, bookCondition, bookWidth);
-                    csvAdapter.saveLibrary(library);
                     return "Book added";
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return "No Shelf found";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String viewBooks(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String viewBooks(List<String> arguments, Library library) {
         if (check(arguments, 1, VIEW_BOOKS)) {
             int i = 0;
 
@@ -171,13 +166,13 @@ public class CLI {
                 out.print(library.getBookList().get(i).getBookGenre() + "\n");
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return "Books viewed";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String deleteBook(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String deleteBook(List<String> arguments, Library library) {
         if (check(arguments, 2, DELETE_BOOK)) {
             int i = 0;
             UUID uuid = UUID.fromString(arguments.get(1));
@@ -186,18 +181,17 @@ public class CLI {
                 if (Objects.equals(library.getBookList().get(i).getBookID(), uuid)) {
                     Book book = library.getBookList().get(i);
                     library.deleteBook(book);
-                    csvAdapter.saveLibrary(library);
                     return "Book deleted";
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return "No Book found";
         } else {
             return INVALID_INPUT;
         }
     }
-    private String searchBook(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String searchBook(List<String> arguments, Library library) {
         if (check(arguments, 2, SEARCH_BOOK)) {
             int i = 0;
 
@@ -211,12 +205,12 @@ public class CLI {
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);;
             return "Books searched";
         }
         return INVALID_INPUT;
     }
-    private String borrowBook(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String borrowBook(List<String> arguments, Library library) {
         if (check(arguments, 3, BORROW_BOOK)) {
             UUID uuid = UUID.fromString(arguments.get(1));
             String email = arguments.get(2);
@@ -226,20 +220,20 @@ public class CLI {
                 while (j < library.getVisitorList().size() && Objects.equals(library.getBookList().get(i).getBookID(), uuid)) {
                     if (Objects.equals(library.getVisitorList().get(j).getVisitorEmailAddress(), email)) {
                         library.getBookList().get(i).borrow(library.getVisitorList().get(j));
-                        csvAdapter.saveLibrary(library);
+
                         return "Book borrowed";
                     }
                     j++;
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return BOOK_WASNT_FOUND;
         } else {
             return INVALID_INPUT;
         }
     }
-    private String returnBook(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String returnBook(List<String> arguments, Library library) {
         if (check(arguments, 2, RETURN_BOOK)) {
             int i = 0;
             int j = 0;
@@ -250,20 +244,19 @@ public class CLI {
                     if (Objects.equals(library.getShelfList().get(j).getGenre(), library.getBookList().get(i).getBookGenre())) {
                         Shelf shelf = library.getShelfList().get(j);
                         library.getBookList().get(i).returnBook(shelf);
-                        csvAdapter.saveLibrary(library);;
                         return "Book returned";
                     }
                     j++;
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);;
             return BOOK_WASNT_FOUND;
         } else {
             return INVALID_INPUT;
         }
     }
-    private String restoreBook(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String restoreBook(List<String> arguments, Library library) {
         if (check(arguments, 2, RESTORE_BOOK)) {
             int i = 0;
 
@@ -272,18 +265,17 @@ public class CLI {
                 if (library.getBookList().get(i).getBookID().equals(uuid)) {
                     Book book = library.getBookList().get(i);
                     book.restoreBook();
-                    csvAdapter.saveLibrary(library);;
                     return "Book restored";
                 }
                 i++;
             }
-
             return BOOK_WASNT_FOUND;
         } else {
             return INVALID_INPUT;
         }
     }
-    private String viewBorrowedBooks(List<String> arguments, Library library, CSVAdapter csvAdapter) {
+
+    private String viewBorrowedBooks(List<String> arguments, Library library) {
         if (check(arguments, 1, VIEW_BORROWED_BOOKS)) {
             int i = 0;
             boolean borrowed = false;
@@ -312,7 +304,6 @@ public class CLI {
                 }
                 i++;
             }
-            csvAdapter.saveLibrary(library);
             return "Borrowed books viewed";
         } else {
             return INVALID_INPUT;
@@ -321,7 +312,7 @@ public class CLI {
 
     public boolean check(List<String> arguments, int limit, String option) {
 
-        String options = "createVisitor, createLibrarian, deleteVisitor, deleteLibrarian, addBook, viewBooks, deleteBook, searchBook, borrowBook, returnBook, restoreBook, viewBorrowedBooks, viewOpenPayments,"/*Visitor*/ + " viewOpenPaymentsLibrarian" /*Librarian*/;
+        String options = "createVisitor, createLibrarian, deleteVisitor, deleteLibrarian, addBook, viewBooks, deleteBook, searchBook, borrowBook, returnBook, restoreBook, viewBorrowedBooks";
         if (arguments.size() != limit) {
             String result = switch (option) {
                 case CREATE_VISITOR, CREATE_LIBRARIAN ->
